Added company address below logo with proper left alignment

--- a/index.html
+++ b/index.html
@@ -22,8 +22,15 @@
     <div class="content-wrapper">
         <div class="header-section">
             <div class="left-section">
-                <div class="logo-container">
-                    <img src="Water-Field-Asia-Logo.png" alt="Water Field Asia Logo" class="header-logo">
+                <div class="logo-section">
+                    <div class="logo-container">
+                        <img src="Water-Field-Asia-Logo.png" alt="Water Field Asia Logo" class="header-logo">
+                    </div>
+                    <div class="company-address">
+                        <p><strong>Water Field Asia Co., Ltd.</strong></p>
+                        <p><strong>39/6 Moo 1 Tambon Nong Hong, Amphur Phan Thong</strong></p>
+                        <p><strong>Chonburi 20160, Thailand</strong></p>
+                    </div>
                 </div>
             </div>
             
