Added header card with company info, document details, and QR code

--- a/index.html
+++ b/index.html
@@ -20,28 +20,29 @@
     </div>
 
     <div class="content-wrapper">
-        <div class="header-section">
-            <div class="left-section">
+        <div class="header-card">
+            <div class="header-left">
                 <div class="logo-section">
                     <div class="logo-container">
                         <img src="Water-Field-Asia-Logo.png" alt="Water Field Asia Logo" class="header-logo">
                     </div>
                     <div class="company-address">
-                        <p><strong>Water Field Asia Co., Ltd.</strong></p>
-                        <p><strong>39/6 Moo 1 Tambon Nong Hong, Amphur Phan Thong</strong></p>
-                        <p><strong>Chonburi 20160, Thailand</strong></p>
+                        <p class="company-name"><strong>Water Field Asia Co., Ltd.</strong></p>
+                        <p><strong>623 Soi Onnut 70/1 Sub 2</strong></p>
+                        <p><strong>Pravet Sub-District, Pravet District,</strong></p>
+                        <p><strong>Bangkok 10250</strong></p>
+                        <p class="phone-number"><strong>Tel.: +66 2320 1994</strong></p>
                     </div>
                 </div>
             </div>
-            
-            <div class="right-section">
-                <div class="doc-info">
-                    <p>Document No: FM-WFA-SER-057<br>
-                    Revision: 00<br>
-                    Date: <span id="currentDate"></span></p>
+            <div class="header-right">
+                <div class="document-info">
+                    <p><strong>Document No: FM-WFA-SER-057</strong></p>
+                    <p><strong>Revision: 00</strong></p>
+                    <p><strong>Date: <span id="currentDate"></span></strong></p>
                 </div>
                 <div class="qr-code">
-                    <img src="QR-Code.jpg" alt="QR Code">
+                    <img src="QR-Code.jpg" alt="QR Code" class="qr-image">
                 </div>
             </div>
         </div>
