Fix: PDF generation consistency and layout issues - Remove page breaks - Optimize spacing - Ensure cross-browser compatibility - Add content loading checks

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div id="operating-conditions-content"></div>
             </section>
 
-            <section class="form-section page-break-before" id="customer-preparation-section">
+            <section class="form-section" id="customer-preparation-section">
                 <div id="customer-preparation-content"></div>
             </section>
         </div>
