fix: Update paths and add GitHub Pages workflow

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pump Service Checklist</title>
-    <link rel="stylesheet" href="/pump-service-checklist/styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
@@ -17,8 +17,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     
     <!-- Application Scripts -->
-    <script src="/pump-service-checklist/language-switcher.js" defer></script>
-    <script src="/pump-service-checklist/app.js" type="module" defer></script>
+    <script src="./language-switcher.js" defer></script>
+    <script src="./app.js" type="module" defer></script>
 </head>
 <body>
     <div class="navbar">
@@ -33,7 +33,7 @@
         <header class="document-header">
             <div class="header-left">
                 <div class="logo-section">
-                    <img src="/pump-service-checklist/Water-Field-Asia-Logo.png" alt="Water Field Asia Logo" class="company-logo" data-translate="Water Field Asia Logo">
+                    <img src="./Water-Field-Asia-Logo.png" alt="Water Field Asia Logo" class="company-logo" data-translate="Water Field Asia Logo">
                 </div>
                 <div class="company-details">
                     <h1 data-translate="company-name">Water Field Asia Co., Ltd.</h1>
