--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pump Service Checklist</title>
-    <base href="./">
+    <script>
+        // Dynamic base URL for GitHub Pages
+        const baseUrl = location.hostname === 'g0ldi2222.github.io' 
+            ? '/pump-service-checklist/' 
+            : '/';
+        document.write(`<base href="${baseUrl}">`);
+    </script>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
