--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
             <!-- Operating Conditions -->
             <section class="form-section" id="operating-conditions">
-                <h2 data-translate="operating-conditions">3. Operating Conditions</h2>
+                <h2 data-translate="operating-conditions">3. Operating Conditions (actual conditions)</h2>
                 <div class="form-grid">
                     <div class="input-group">
                         <label for="temperature" class="required" data-translate="Temperature (°C)">Temperature (°C)</label>
